--- a/web/index.html
+++ b/web/index.html
@@ -1,109 +1,110 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <!-- Meta -->
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width">
-  <meta content="neuromore Docs" property="og:title">
-  <meta content="neuromore Documentation." name="description">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <head>
+    <!-- Meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width" />
+    <meta content="neuromore Docs" property="og:title" />
+    <meta content="neuromore Documentation." name="description" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
-  <title>neuromore Documentation</title>
-  <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <title>neuromore Documentation</title>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-  <!-- Flatdoc -->
-  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js'></script>
-  <script src='js/flatdoc.js'></script>
-  <!-- <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js'></script> -->
-  <!-- <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script> -->
+    <!-- Flatdoc -->
+    <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
+    <script src="js/flatdoc.js"></script>
+    <!-- <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js'></script> -->
+    <!-- <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script> -->
 
-  <!-- Flatdoc theme -->
-  <link href='css/flatdoc.css' rel='stylesheet'>
-  <!-- <link  href='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css' rel='stylesheet'> -->
+    <!-- Flatdoc theme -->
+    <link href="css/flatdoc.css" rel="stylesheet" />
+    <!-- <link  href='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css' rel='stylesheet'> -->
 
-  <!-- lightbox -->
-  <script src='js/lightbox.js'></script>
-  <link  href='css/lightbox.css' rel='stylesheet'>
+    <!-- lightbox -->
+    <script src="js/lightbox.js"></script>
+    <link href="css/lightbox.css" rel="stylesheet" />
 
-  <!-- neuromore style -->
-  <link href='css/style.css' rel='stylesheet'>
-</head>
+    <!-- neuromore style -->
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
+  <body role="flatdoc" class="big-h3">
+    <nav class="headline">
+      <div class="subnav" id="main_menu"></div>
+    </nav>
 
-<body role='flatdoc'>
+    <!-- Page Menu on left side -->
+    <div class="pagemenu" id="page_menu"></div>
+    <div class="menubar" role="flatdoc-menu"></div>
+    <div class="content-root pushContent">
+      <div role="flatdoc-content" class="content"></div>
+    </div>
 
-  <nav class="headline">
-    <div class="subnav" id="main_menu"></div>
-  </nav>
-
-  <!-- Page Menu on left side -->
-  <div class='pagemenu' id="page_menu"></div>
-  <div class='menubar' role='flatdoc-menu'></div>
-  <div class='content-root pushContent'>
-    <div role='flatdoc-content' class='content'></div>
-  </div>
-
-
-
-
-<script>
-  var urlParas = window.location.search.replace('?','').split('&');
-  var parameters = {};
-  for(var x = 0; x < urlParas.length; x++){
-      parameters[urlParas[x].split('=')[0]] = urlParas[x].split('=')[1];
-  }
-  // Set default categorie and page if not exist
-  var searchParas = '';
-  if(parameters.cat === undefined){
-    parameters.cat = 0;
-  }
-  if(parameters.page === undefined){
-    parameters.page = 0;
-  }
-  <!-- window.location = window.location.href; -->
-  var refresh = function(){
-    window.location.reload();
-  };
-
-  $.getJSON('https://raw.githubusercontent.com/neuromore/Doc/master/Files.json', function(data) {
-    for (var i = 0; i < data.chapters.length; i++) {
-      var mainMenuLink = document.createElement('a');
-      var linkText = document.createTextNode(data.chapters[i].name);
-      mainMenuLink.appendChild(linkText);
-      mainMenuLink.title = data.chapters[i].name;
-      mainMenuLink.href = '?cat='+i+'&page=0';
-      var div = document.getElementById("main_menu");
-      div.appendChild(mainMenuLink);
-
-      // Selected main menu
-      if(parameters.cat == i){
-        mainMenuLink.className = 'subnavSelected';
-
-        for (var j = 0; j < data.chapters[parameters.cat].subchapters.length; j++) {
-          var pageMenuLink = document.createElement('a');
-          var pageLinkText = document.createTextNode(data.chapters[parameters.cat].subchapters[j].name);
-          pageMenuLink.appendChild(pageLinkText);
-          pageMenuLink.title = data.chapters[parameters.cat].subchapters[j].name;
-          pageMenuLink.href = '?cat='+i+'&page='+j;
-
-          if(parameters.page == j){
-            pageMenuLink.className = 'pageSelect mainMenuItem';
-          }
-          else{
-            pageMenuLink.className = 'pageUnselect mainMenuItem';
-          }
-          var div2 = document.getElementById("page_menu");
-          div2.appendChild(pageMenuLink);
-        }
+    <script>
+      var urlParas = window.location.search.replace("?", "").split("&");
+      var parameters = {};
+      for (var x = 0; x < urlParas.length; x++) {
+        parameters[urlParas[x].split("=")[0]] = urlParas[x].split("=")[1];
       }
-    }
-    var link = data.rootUrl+data.chapters[parameters.cat].subchapters[parameters.page].relative;
-    Flatdoc.run({fetcher: Flatdoc.file(link)});
-  });
+      // Set default categorie and page if not exist
+      var searchParas = "";
+      if (parameters.cat === undefined) {
+        parameters.cat = 0;
+      }
+      if (parameters.page === undefined) {
+        parameters.page = 0;
+      }
+      <!-- window.location = window.location.href; -->
+      var refresh = function () {
+        window.location.reload();
+      };
+      // https://raw.githubusercontent.com/neuromore/Doc/master/
+      $.getJSON("../Files.json", function (data) {
+        for (var i = 0; i < data.chapters.length; i++) {
+          var mainMenuLink = document.createElement("a");
+          var linkText = document.createTextNode(data.chapters[i].name);
+          mainMenuLink.appendChild(linkText);
+          mainMenuLink.title = data.chapters[i].name;
+          mainMenuLink.href = "?cat=" + i + "&page=0";
+          var div = document.getElementById("main_menu");
+          div.appendChild(mainMenuLink);
 
-</script>
-</body>
+          // Selected main menu
+          if (parameters.cat == i) {
+            mainMenuLink.className = "subnavSelected";
+
+            for (
+              var j = 0;
+              j < data.chapters[parameters.cat].subchapters.length;
+              j++
+            ) {
+              var pageMenuLink = document.createElement("a");
+              var pageLinkText = document.createTextNode(
+                data.chapters[parameters.cat].subchapters[j].name
+              );
+              pageMenuLink.appendChild(pageLinkText);
+              pageMenuLink.title =
+                data.chapters[parameters.cat].subchapters[j].name;
+              pageMenuLink.href = "?cat=" + i + "&page=" + j;
+
+              if (parameters.page == j) {
+                pageMenuLink.className = "pageSelect mainMenuItem";
+              } else {
+                pageMenuLink.className = "pageUnselect mainMenuItem";
+              }
+              var div2 = document.getElementById("page_menu");
+              div2.appendChild(pageMenuLink);
+            }
+          }
+        }
+        var link =
+          data.rootUrl +
+          data.chapters[parameters.cat].subchapters[parameters.page].relative;
+        Flatdoc.run({ fetcher: Flatdoc.file(link) });
+      });
+    </script>
+  </body>
 </html>
